# TestTaskWB

./: .dockerignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
core/database/: __init__.py  models.py  orm_query_joins.py  orm_query_product.py  orm_query_stocks.py  orm_query_user.py
core/keyboards/: __init__.py  client_keyboards.py  inline_client_keyboards.py
core/routers/: FSMclienthandlers.py  __init__.py  clienthandlers.py
core/tracker/: __init__.py  core.py
