[tool.poetry]
name = "testtaskwb"
version = "0.1.0"
description = ""
authors = ["GutesTod <jefflol003@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.4.1"
sqlalchemy = "^2.0.28"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
